add template data and partials folders

--- a/src/templates/views/plop.hbs
+++ b/src/templates/views/plop.hbs
@@ -4,7 +4,9 @@
 	<title>coucou</title>
 </head>
 <body>
+{{> header}}
 coucou
 <div class="plop">qsdqs</div>
+<p>Hello {{firstName}}</p>
 </body>
 </html>
