--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,3 +1,14 @@
 body {
-	background: #bada55;
+	background-image: linear-gradient(90deg, #21468b 33%, #fff 33%, #fff 66%, #ae1c28 66%);
+	text-align: center;
+}
+
+pre {
+    display: inline-block;
+    margin-left: -5rem;
+    text-align: left;
+}
+
+h1 {
+	color: #555;
 }
