add context var for handlebars

--- a/src/templates/views/index.hbs
+++ b/src/templates/views/index.hbs
@@ -8,6 +8,9 @@
 	{{> header}}
 
 	<img src="./images/JC.jpg" alt="Jacques Chirac">
+	<div>
+		<em>Last build: {{date}}</em>
+	</div>
 
 	{{> footer}}
 
