add node modules file injection and include bootstrap 3

--- a/src/templates/partials/architecture/foot.hbs
+++ b/src/templates/partials/architecture/foot.hbs
@@ -1,5 +1,7 @@
 {{!-- Basic Page Needs
 	–––––––––––––––––––––––––––––––––––––––––––––––––– --}}
+	<!-- node_modules:js -->
+	<!-- endinject -->
 	<script type="text/javascript" src="/js/all.min.js"></script>
 
 
