--- a/src/templates/partials/architecture/head.hbs
+++ b/src/templates/partials/architecture/head.hbs
@@ -41,6 +41,8 @@
 
 	{{!-- CSS
 	–––––––––––––––––––––––––––––––––––––––––––––––––– --}}
+	<!-- node_modules:css -->
+	<!-- endinject -->
 	<link rel="stylesheet" href="/css/all.min.css"/>
 
 </head>
