--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,14 +1,8 @@
-body {
-	background-image: linear-gradient(90deg, #21468b 33%, #fff 33%, #fff 66%, #ae1c28 66%);
-	text-align: center;
-}
+@import '_variables';
+@import 'overrides';
+@import 'theme';
+@import 'header';
+@import 'footer';
 
-pre {
-    display: inline-block;
-    margin-left: -5rem;
-    text-align: left;
-}
-
-h1 {
-	color: #555;
-}
+// Page styles
+@import 'index';
