--- a/src/templates/views/index.hbs
+++ b/src/templates/views/index.hbs
@@ -1,10 +1,11 @@
-{{#>layout }}
-<div>
-  <img src="/images/JC.jpg" alt="Jacques Chirac">
-
-	<div>
-		<em>Last build: {{buildTime}}</em>
+<div class="container {{getPathName}}">
+	<div class="row">
+		<div class="col-md-10 col-sm-10 col-xs-10 col-md-offset-1 col-sm-offset-1 col-xs-offset-1">
+		{{#>layout }}
+		<div>
+		  {{title}}
+		</div>
+		{{/layout}}
+		</div>
 	</div>
 </div>
-
-{{/layout}}
